tcf_website/static/base/simple-sidebar.css
/*!
 * Start Bootstrap - Simple Sidebar (https://startbootstrap.com/template-overviews/simple-sidebar)
 * Copyright 2013-2019 Start Bootstrap
 * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-simple-sidebar/blob/master/LICENSE)
 */
body {
  overflow-x: hidden;
}

#sidebar-wrapper {
  height: calc(100vh - 70px); /* Subtract height of navbar */
  margin-left: -15rem;
  -webkit-transition: margin .25s ease-out;
  -moz-transition: margin .25s ease-out;
  -o-transition: margin .25s ease-out;
  transition: margin .25s ease-out;
  background-color: rgb(23, 34, 72);
  position: fixed;
  z-index: 9999;
}

#sidebar-wrapper .sidebar-heading {
  padding: 0.875rem 1.25rem;
  font-size: 1.2rem;
}

#sidebar-wrapper .list-group {
  width: 15rem;
  margin-top: 2rem;
}

#sidebar-wrapper .list-group-item, .footer, .footer a {
  background-color: rgb(23, 34, 72);
  color: gray;
}

#sidebar-wrapper .list-group-item.active,
#sidebar-wrapper .list-group-item:hover {
  color: white;
  border-color: rgb(23, 34, 72);
  filter: brightness(150%);
}

#page-content-wrapper {
  min-width: 100vw;
}

#wrapper.toggled #sidebar-wrapper {
  margin-left: 0;
}

@media (min-width: 768px) {
  #sidebar-wrapper {
    margin-left: 0;
  }

  #page-content-wrapper {
    min-width: 0;
    width: 100%;
  }

  #wrapper.toggled #sidebar-wrapper {
    margin-left: -15rem;
  }
}

